<resources>
    <string name="app_name">ToDo List</string>
    <string name="tv_tarefas">Tarefas</string>
    <string name="titleTextHint">Título</string>
    <string name="descriptionHintText">Descrição</string>
    <string name="dateTextHint">Data</string>
    <string name="hourHintText">Horario</string>
    <string name="cancelTextBtn">Cancelar</string>
    <string name="createTaskTextBtn">Criar Tarefa</string>
</resources>